[package]
name = "qulacs-bridge"
description = "High level bindings to Qulacs the Quantum Circuit Simulator"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
keywords = ["quantum", "simulator", "qulacs"]

[features]
default = []
num = ["dep:num"]

[dependencies]
cxx = "1.0.148"
num = { version = "0.4.3", optional = true }

[build-dependencies]
cxx-build = "1.0.148"
pkg-config = "0.3.32"

[dev-dependencies]
rand = "0.9.0"
